2010-10-28  Alan Modra  <amodra@gmail.com>

	* config/tc-d30v.c (d30v_cons_align): Don't align .eh_frame.

2010-10-26  Alan Modra  <amodra@gmail.com>

	* config/obj-coff.c (coff_format_ops): Fix typo.

2010-10-25  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (macro2): Delete.

2010-10-25  Nathan Sidwell  <nathan@codesourcery.com>

	* config/tc-tic6x.c: Add attribution.

2010-10-25  Mark Mitchell  <mark@codesourcery.com>

	* obj.h (struct format_ops): Add adjust_symtab.
	* config/obj-multi.h (obj_adjust_symtab): Define.
	* config/obj-aout.c (aout_format_ops): Init new field.
	* config/obj-coff.c (coff_format_ops): Likewise.
	* config/obj-ecoff.c (ecoff_format_ops): Likewise.
	* config/obj-elf.c (elf_format_ops): Likewise.

2010-10-25  Alan Modra  <amodra@gmail.com>

	PR gas/12049
	* write.c (relax_frag): Don't allow forward branches to temporarily
	becomde backward branches.

2010-10-23  Mark Mitchell  <mark@codesourcery.com>

	* config/obj-elf.c (elf_adjust_symtab): New.  Move group section
	processing here from elf_frob_file.  Ensure that group signature
	symbols have the name of the group.
	(elf_frob_file): Move group section processing to
	elf_adjust_symtab.
	* config/obj-elf.h (elf_adjust_symtab): Declare.
	(obj_adjust_symtab): Define.
	* config/tc-arm.c (arm_adjust_symtab): Call elf_adjust_symtab.

2010-10-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/tc-sparc.h [TE_SOLARIS] (ELF_TARGET_FORMAT): Define as
	elf32-sparc-sol2.
	(ELF64_TARGET_FORMAT): Define as elf64-sparc-sol2.

2010-10-21  Joseph Myers  <joseph@codesourcery.com>

	* config/tc-tic6x.c (tic6x_arch_attribute, tic6x_arches,
	md_assemble, tic6x_set_attributes): Update for attribute renaming.
	* doc/c-tic6x.texi: Update for attribute renaming.

2010-10-19  Alan Modra  <amodra@gmail.com>

	* write.c (relax_segment): Correct address on frag added to stop
	leb128/align frags bouncing.

2010-10-19  Alan Modra  <amodra@gmail.com>

	PR gas/12049