@@ -1,3 +1,7 @@
+2010-10-28  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
+
+	* s390-opc.txt: cfxr, cfdr and cfer z900 -> g5.
+
 2010-10-25  Chao-ying Fu  <fu@mips.com>
 
 	* mips-opc.c (madd, maddu, msub, msubu, mult, multu): Change D33 to D32.
